--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
     <main class="my-3">
-        <div class="container p-5">
+        <div class="container p-5 d-none-container" id="hidden-container">
             <div id="container-griglia" class="d-flex flex-wrap mx-auto"></div>
         </div>
     </main>
